relatorios/202211516/T5/compilador.txt
arvore.cpp: In instantiation of ‘void Arvore<T>::insere(T) [with T = int]’:
arvore.cpp:58:10:   required from ‘void Arvore<T>::inicia(std::__cxx11::list<T>&) [with T = int]’
arvore.cpp:112:21:   required from here
arvore.cpp:31:21: error: no matching function for call to ‘Arvore<int>::Arvore(<brace-enclosed initializer list>)’
   31 |         this->esq = new Arvore<T>{i};
      |                     ^~~~~~~~~~~~~~~~
arvore.cpp:20:8: note: candidate: ‘Arvore<int>::Arvore()’
   20 | struct Arvore {
      |        ^~~~~~
arvore.cpp:20:8: note:   candidate expects 0 arguments, 1 provided
arvore.cpp:20:8: note: candidate: ‘constexpr Arvore<int>::Arvore(const Arvore<int>&)’
arvore.cpp:20:8: note:   no known conversion for argument 1 from ‘int’ to ‘const Arvore<int>&’
arvore.cpp:20:8: note: candidate: ‘constexpr Arvore<int>::Arvore(Arvore<int>&&)’
arvore.cpp:20:8: note:   no known conversion for argument 1 from ‘int’ to ‘Arvore<int>&&’
arvore.cpp:40:21: error: no matching function for call to ‘Arvore<int>::Arvore(<brace-enclosed initializer list>)’
   40 |         this->dir = new Arvore<T>{i};
      |                     ^~~~~~~~~~~~~~~~
arvore.cpp:20:8: note: candidate: ‘Arvore<int>::Arvore()’
   20 | struct Arvore {
      |        ^~~~~~
arvore.cpp:20:8: note:   candidate expects 0 arguments, 1 provided
arvore.cpp:20:8: note: candidate: ‘constexpr Arvore<int>::Arvore(const Arvore<int>&)’
arvore.cpp:20:8: note:   no known conversion for argument 1 from ‘int’ to ‘const Arvore<int>&’
arvore.cpp:20:8: note: candidate: ‘constexpr Arvore<int>::Arvore(Arvore<int>&&)’
arvore.cpp:20:8: note:   no known conversion for argument 1 from ‘int’ to ‘Arvore<int>&&’
arvore.cpp: In instantiation of ‘void Arvore<T>::insere(T) [with T = char]’:
arvore.cpp:58:10:   required from ‘void Arvore<T>::inicia(std::__cxx11::list<T>&) [with T = char]’
arvore.cpp:141:21:   required from here
arvore.cpp:31:21: error: no matching function for call to ‘Arvore<char>::Arvore(<brace-enclosed initializer list>)’
   31 |         this->esq = new Arvore<T>{i};
      |                     ^~~~~~~~~~~~~~~~
arvore.cpp:20:8: note: candidate: ‘Arvore<char>::Arvore()’
   20 | struct Arvore {
      |        ^~~~~~
arvore.cpp:20:8: note:   candidate expects 0 arguments, 1 provided
arvore.cpp:20:8: note: candidate: ‘constexpr Arvore<char>::Arvore(const Arvore<char>&)’
arvore.cpp:20:8: note:   no known conversion for argument 1 from ‘char’ to ‘const Arvore<char>&’
arvore.cpp:20:8: note: candidate: ‘constexpr Arvore<char>::Arvore(Arvore<char>&&)’
arvore.cpp:20:8: note:   no known conversion for argument 1 from ‘char’ to ‘Arvore<char>&&’
arvore.cpp:40:21: error: no matching function for call to ‘Arvore<char>::Arvore(<brace-enclosed initializer list>)’
   40 |         this->dir = new Arvore<T>{i};
      |                     ^~~~~~~~~~~~~~~~
arvore.cpp:20:8: note: candidate: ‘Arvore<char>::Arvore()’
   20 | struct Arvore {
      |        ^~~~~~
arvore.cpp:20:8: note:   candidate expects 0 arguments, 1 provided
arvore.cpp:20:8: note: candidate: ‘constexpr Arvore<char>::Arvore(const Arvore<char>&)’
arvore.cpp:20:8: note:   no known conversion for argument 1 from ‘char’ to ‘const Arvore<char>&’
arvore.cpp:20:8: note: candidate: ‘constexpr Arvore<char>::Arvore(Arvore<char>&&)’
arvore.cpp:20:8: note:   no known conversion for argument 1 from ‘char’ to ‘Arvore<char>&&’
